# CubA4

./: .gitignore  .gitlab-ci.yml  Arch.cmake  CMakeLists.txt  CubA4.smproj  Util.cmake  build.py  cir.py  compile_internal_resources.py  gen.py  generate.py  vcpkg.json
Core/: CMakeLists.txt  generate.py
Core/include/: CommonFactory.hpp  Core.hpp  CoreConfig.hpp
Core/include/config/: CoreConfig.hpp  FilePaths.hpp
Core/include/game/: Game.hpp
Core/include/logging/: Logger.hpp
Core/include/system/: Environment.hpp  EnvironmentBuilder.hpp  EnvironmentBuilderContext.hpp  EnvironmentBuilderData.hpp  EnvironmentContext.hpp  IdentityMap.hpp  Startup.hpp
Core/include/world/: Chunk.hpp  World.hpp
Core/src/: CommonFactory.cpp  Core.cpp  Core.hpp  CoreConfig.cpp
Core/src/audio/: AudioImporter.cpp  AudioImporter.hpp  AudioManager.cpp  AudioManager.hpp  AudioTrack.cpp  AudioTrack.hpp  AudioTrackManager.cpp  AudioTrackManager.hpp
Core/src/cache/: Cache.cpp  Cache.hpp  CacheManager.cpp  CacheManager.hpp  CacheResource.cpp  CacheResource.hpp
Core/src/config/: CoreConfig.cpp  CoreConfig.hpp  FilePaths.cpp  FilePaths.hpp
Core/src/core/: Environment.cpp  Environment.hpp  EnvironmentBuilder.cpp  EnvironmentBuilder.hpp  EnvironmentBuilderContext.cpp  EnvironmentBuilderContext.hpp  EnvironmentBuilderData.cpp  EnvironmentBuilderData.hpp  EnvironmentContext.cpp  EnvironmentContext.hpp  IdentityMap.cpp  IdentityMap.hpp  Runtime.cpp  Runtime.hpp  Startup.cpp  Startup.hpp
Core/src/filesystem/: Directory.cpp  Directory.hpp  File.cpp  File.hpp
Core/src/game/: Game.cpp  Game.hpp  GameControl.cpp  GameControl.hpp
Core/src/logging/: Logger.cpp  Logger.hpp  LoggerStreams.cpp  LoggerStreams.hpp
Core/src/model/: ModelFactory.cpp  ModelFactory.hpp  ModelReader.cpp  ModelReader.hpp  RenderModelDataJson.cpp  RenderModelDataJson.hpp  SimpleBlockRenderModelDefinition.cpp  SimpleBlockRenderModelDefinition.hpp  SimpleRenderModelDefinition.cpp  SimpleRenderModelDefinition.hpp
Core/src/object/: Entity.cpp  Entity.hpp  EntityBuilderData.hpp  EntityControllerRules.cpp  EntityControllerRules.hpp  EntityFactory.cpp  EntityFactory.hpp  EntityFactoryBuilder.cpp  EntityFactoryBuilder.hpp  EntityManager.cpp  EntityManager.hpp  EntityRenderBuilder.cpp  EntityRenderBuilder.hpp  EntityRenderManager.cpp  EntityRenderManager.hpp
Core/src/physics/: BoxCollisionBodyDefinition.cpp  BoxCollisionBodyDefinition.hpp  ChunkCollision.cpp  ChunkCollision.hpp  DebugRender.cpp  DebugRender.hpp  PhysicsEntityControl.cpp  PhysicsEntityControl.hpp  PhysicsEntityControllerWrapper.cpp  PhysicsEntityControllerWrapper.hpp  PhysicsFactory.cpp  PhysicsFactory.hpp  PhysicsManager.cpp  PhysicsManager.hpp  PhysicsWorld.cpp  PhysicsWorld.hpp
Core/src/resources/: FilesystemResource.cpp  FilesystemResource.hpp  FilesystemResourceProvider.cpp  FilesystemResourceProvider.hpp  Resource.cpp  Resource.hpp  Resources.cpp  Resources.hpp  ResourcesManager.cpp  ResourcesManager.hpp
Core/src/system/: Environment.cpp  Environment.hpp  EnvironmentBuilder.cpp  EnvironmentBuilder.hpp  EnvironmentBuilderContext.cpp  EnvironmentBuilderContext.hpp  EnvironmentBuilderData.cpp  EnvironmentBuilderData.hpp  EnvironmentContext.cpp  EnvironmentContext.hpp  IdentityMap.cpp  IdentityMap.hpp  Runtime.cpp  Runtime.hpp  Startup.cpp  Startup.hpp
Core/src/ui/: UIManager.cpp  UIManager.hpp
Core/src/util/: ChunkPosHash.hpp  SubscriptionHelper.hpp
Core/src/world/: BlockDataStorage.cpp  BlockDataStorage.hpp  BlockDataStorageTransaction.cpp  BlockDataStorageTransaction.hpp  Chunk.cpp  Chunk.hpp  ChunkAssembler.cpp  ChunkAssembler.hpp  ChunkBMulti.cpp  ChunkBMulti.hpp  ChunkBMutable.cpp  ChunkBMutable.hpp  ChunkBRange.cpp  ChunkBRange.hpp  ChunkBSet.cpp  ChunkBSet.hpp  ChunkRange.cpp  ChunkRange.hpp  ChunkRangeBuilder.cpp  ChunkRangeBuilder.hpp  DataProvider.cpp  DataProvider.hpp  Dimension.cpp  Dimension.hpp  IBlockDataStorage.hpp  World.cpp  World.hpp  WorldControl.cpp  WorldControl.hpp
CoreBase/: CMakeLists.txt
CoreBase/include/: ApplicationFlags.hpp  ApplicationModeFlags.hpp  CoreBase.hpp  CoreConfigBase.hpp  CoreExportHelper.hpp  ICore.hpp  ICoreConfig.hpp  ILogger.hpp  ILoggerTagged.hpp  LogCommon.hpp
CoreBase/include/audio/: IAudioBuffer.hpp  IAudioBufferPool.hpp  IAudioImporter.hpp  IAudioListener.hpp  IAudioManager.hpp  IAudioPlayer.hpp  IAudioSource.hpp  IAudioSourcePool.hpp  IAudioTrack.hpp  IAudioTrackManager.hpp
CoreBase/include/base/: Color.hpp  ServerTask.hpp  Vector.hpp
CoreBase/include/cache/: CacheType.hpp  ICache.hpp  ICacheManager.hpp  ICacheResource.hpp
CoreBase/include/config/: ICoreConfig.hpp  IFilePaths.hpp
CoreBase/include/core/: IAppCallback.hpp  IAppClientCallback.hpp  IEnvironment.hpp  IEnvironmentBuilder.hpp  IIdentityiMap.hpp  IRuntime.hpp  IStartup.hpp
CoreBase/include/exceptions/: IBaseCoreException.hpp  ICoreConfigException.hpp  ICoreException.hpp  ICoreLoggingException.hpp
CoreBase/include/filesystem/: IAbstractDirectory.hpp  IAbstractResource.hpp
CoreBase/include/game/: IGame.hpp  IGameControl.hpp  (+1 more)
CubA4Launcher/: CMakeLists.txt
CubA4Launcher/src/: app.cpp  app.hpp  mainFrame.cpp  mainFrame.hpp
CubA4Loader/: CMakeLists.txt
CubA4Loader/src/: main.cpp
CubA4Server/: CMakeLists.txt
CubA4Server/src/: main.cpp
ModBase/: CMakeLists.txt
ModBase/include/: ExportHelper.hpp  IModInfo.hpp  Loader.hpp  ModExportHelper.hpp  ModInfo.hpp
ModLoader/: CMakeLists.txt
ModLoader/include/: ModLoaderLibrary.hpp
ModVanilla/: CMakeLists.txt
ModVanilla/data-raw/: grass.ase
ModVanilla/include/: IModVanilla.hpp  ModVanilla.hpp  ModVanillaConst.hpp
ModVanilla/src/: ExportMod.cpp  ModVanilla.cpp  ModVanilla.hpp  ModVanillaInfo.cpp  ModVanillaInfo.hpp
Network/: CMakeLists.txt
Network/include/: NetworkLibrary.hpp
RenderBase/: CMakeLists.txt  README.md
RenderBase/include/: IRenderEngine.hpp  IRenderInfo.hpp  RenderEngine.hpp  RenderExportHelper.hpp  RenderInfo.hpp
RenderVulkan/: CMakeLists.txt  shaders.cmake
RenderVulkan/src/: Loader.cpp  VulkanInfo.cpp  VulkanInfo.hpp  VulkanInfoConst.hpp
(+768 files in other folders)
